--- a/packages/strapi/package.json
+++ b/packages/strapi/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.4.5",
     "@strapi/plugin-users-permissions": "4.4.5",
+    "@strapi/provider-email-sendgrid": "^4.5.0",
     "@strapi/strapi": "4.4.5",
     "@strapi/utils": "^4.4.5",
     "better-sqlite3": "7.4.6",
-    "strapi-plugin-populate-deep": "^1.1.2"
+    "strapi-plugin-email-designer": "^2.1.1",
+    "strapi-plugin-populate-deep": "^1.1.2",
+    "strapi-stripe": "^2.5.1"
   },
   "author": {
     "name": "A Strapi developer"
