--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,7 +20,9 @@
     "next": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^1.3.0"
+    "reflexbox": "^4.0.6",
+    "swr": "^1.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.5",
